--- a/Projects/countdown timer/styles.css
+++ b/Projects/countdown timer/styles.css
@@ -3,6 +3,36 @@
   box-sizing: border-box;
 }
 body {
+  background-image: url(snow.jpg);
   font-family: "Poppins", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   margin: 0;
+  min-height: 100vh;
+  background-size: cover;
+  background-position: center center;
+}
+h1 {
+  font-weight: normal;
+  font-size: 4rem;
+  margin-top: 5rem;
+}
+.countdown-container {
+  display: flex;
+}
+.big-text {
+  font-weight: bold;
+  font-size: 6rem;
+  line-height: 1;
+  margin: 0 2rem;
+}
+
+.countdown-el {
+  text-align: center;
+}
+
+.countdown-el span {
+  font-size: 1.3rem;
 }
