--- a/Projects/countdown timer/styles.css
+++ b/Projects/countdown timer/styles.css
@@ -4,15 +4,16 @@
 }
 body {
   background-image: url(snow.jpg);
-  font-family: "Poppins", sans-serif;
+  background-size: cover;
+  background-position: center center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0;
+  font-family: "Poppins", sans-serif;
+
   min-height: 100vh;
-  background-size: cover;
-  background-position: center center;
+  margin: 0;
 }
 h1 {
   font-weight: normal;
@@ -21,12 +22,15 @@ h1 {
 }
 .countdown-container {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .big-text {
   font-weight: bold;
   font-size: 6rem;
   line-height: 1;
-  margin: 0 2rem;
+  margin: 1rem 2rem;
 }
 
 .countdown-el {
