--- a/Projects/quiz-app/styles.css
+++ b/Projects/quiz-app/styles.css
@@ -3,6 +3,20 @@
   box-sizing: border-box;
 }
 body {
+  background-color: #b8c6db;
+  background-image: linear-gradient(315deg, #b8c6db, #f5f7fa 74%);
   font-family: "Poppins", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
+  min-height: 100vh;
+}
+
+.quiz-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  height: 240px;
 }
