--- a/Projects/quiz-app/styles.css
+++ b/Projects/quiz-app/styles.css
@@ -23,7 +23,11 @@ body {
 .quiz-header {
   padding: 2rem;
 }
-
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
+}
 ul {
   list-style-type: none;
   padding: 0;
