--- a/Projects/recipe-app/styles.css
+++ b/Projects/recipe-app/styles.css
@@ -3,12 +3,56 @@
   box-sizing: border-box;
 }
 body {
+  background: #ece9e6;
+  background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+  background: linear-gradient(to right, #ffffff, #ece9e6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: "Poppins", sans-serif;
   margin: 0;
-}
-.mobile-container {
-  width: 400px;
+  min-height: 100vh;
 }
 img {
   max-width: 100%;
+}
+.mobile-container {
+  background-color: #fff;
+  width: 400px;
+  box-shadow: 0 0 5px #33333303;
+}
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+header input {
+  background-color: #efefef;
+  border: none;
+  border-radius: 3px;
+  padding: 0 0.5rem 1rem;
+}
+header button {
+  background-color: transparent;
+  border: none;
+  color: #aaa;
+  font-size: 2rem;
+  margin-left: 10px;
+}
+.fav-container {
+  padding: 1rem;
+  text-align: center;
+}
+
+.fav-meals {
+  display: flex;
+  list-style-position: none;
+  padding: 0;
+}
+.fav-meals li {
+  border-radius: 50%;
+
+  height: 50px;
+  width: 50px;
 }
