--- a/Projects/recipe-app/styles.css
+++ b/Projects/recipe-app/styles.css
@@ -18,7 +18,9 @@ img {
 }
 .mobile-container {
   background-color: #fff;
-  width: 400px;
+  border-radius: 3px;
+  /* width: 400px; */
+  overflow: hidden;
   box-shadow: 0 0 5px #33333303;
 }
 header {
@@ -41,18 +43,48 @@ header button {
   margin-left: 10px;
 }
 .fav-container {
+  background-color: rgb(233, 199, 255);
   padding: 1rem;
   text-align: center;
 }
 
 .fav-meals {
   display: flex;
-  list-style-position: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  list-style-type: none;
   padding: 0;
 }
-.fav-meals li {
-  border-radius: 50%;
 
-  height: 50px;
-  width: 50px;
+.fav-meals li {
+  margin: 5px;
+  width: 85px;
+}
+
+.fav-meals li img {
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 5px #3333331a;
+
+  object-fit: cover;
+  height: 70px;
+  width: 70px;
+}
+
+.fav-meals li span {
+  font-size: 0.9rem;
+}
+.meal {
+  border-radius: 3px;
+  box-shadow: 0 0 10px 2px #3333331a;
+  margin: 10px;
+}
+
+.meal-header {
+}
+
+.meal-header img {
+}
+
+.meal-body {
 }
